Fixed line-height of h1 on mobile

--- a/_sass/layout/_comic.scss
+++ b/_sass/layout/_comic.scss
@@ -13,6 +13,7 @@
     color: rgba(0, 0, 0,.9);
     font-weight: bold;
     font-size: 60px;
+    line-height: 1em;
   }
 
   h2, h3 {
